started function call is broken

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Code Quiz</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="text-align: center;">
         <div class="timer"></div>
         <div class="display-questions">
             <h1>Code Quiz Challenge</h1>
