fixed opening page function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container" style="text-align: center;">
         <div class="timer"></div>
-        <div class="display-questions">
+        <div class="display-question">
             <h1>Code Quiz Challenge</h1>
 
         </div>
